Add WordFrequencyView and corresponding viz in Vue
* Update `generator-js` script
* Update the generated module `slap-client` in JS
* Add Word Cloud viz in SongDetailView
