# slap_dj/app/views/__init__.py
@@ -3,16 +3,19 @@ from typing import List
 
 from django.db.models import Max
 from rest_framework import filters
+from rest_framework.schemas.openapi import AutoSchema
 
 from services.genius import tokenize_words
 from app.support.init.nltk import initialize_nltk
+from utils.nlp import extract_eng_words
 from ..model_generator import retrieve_cached_song
+from ..support.lyric_metrics import get_lyrics_frequency_df
+from ..support.repetition import get_bow_dataframe
 
 initialize_nltk()
 from nltk.stem import SnowballStemmer
 from nltk.corpus import stopwords
 from rest_framework import viewsets
-from rest_framework.compat import coreapi
 from rest_framework.response import Response
 from rest_framework.views import APIView
 
@@ -126,6 +129,66 @@ class WordRandomizationView(APIView):
                 if word.word in stopwords.words('english') and no_stopwords:
                     continue
                 return Response({'word': word.word})
+
+
+class WordFrequencyViewParams(filters.BaseFilterBackend):
+    def filter_queryset(self, request, queryset, view):
+        return None
+
+    def get_schema_operation_parameters(self, view):
+        return [{
+            'name': 'viz_format',
+            'required': False,
+            'in': 'query',
+            'description': 'The selected data format for visualization',
+            'schema': {
+                'type': 'string'
+            }},
+            {
+                'name': 'lang',
+                'required': False,
+                'in': 'query',
+                'description': '',
+                'schema': {
+                    'type': 'string'
+                }},
+        ]
+
+
+class WordFrequencyView(APIView):
+    schema = AutoSchema()
+    filter_backends = [WordFrequencyViewParams]
+    bow_viz_formats = ('raw', 'tuple', 'plotly')
+
+    def get(self, request, song_id: str):
+        viz_format = self.request.query_params.get('viz_format', 'raw')
+        lang = self.request.query_params.get('lang', 'en')
+        s = retrieve_cached_song(pk=song_id)
+        if lang == 'en':
+            words = extract_eng_words(s.words)
+        else:
+            words = s.words
+        if viz_format in self.bow_viz_formats:
+            df = get_bow_dataframe(words)
+            if viz_format == 'raw':
+                df = df
+            elif viz_format == 'tuple':
+                df = df[['word', 'freq']].to_records(index=False)
+            elif viz_format == 'plotly':
+                df = df.iloc[:10]
+                content = {
+                    'x': df['word'],
+                    'y': df['freq']
+                }
+                return Response(content)
+            return Response(df)
+        elif viz_format == 'obsolete':
+            df = get_lyrics_frequency_df(s.lyrics)
+            content = {
+                'x': df['words'],
+                'y': df['count']
+            }
+            return Response(content)
 
 
 class WordView(APIView):
